--- a/src/tweets/templates/create_view.html
+++ b/src/tweets/templates/create_view.html
@@ -1,4 +1,1 @@
-<form class="form" action="" method="POST"> {% csrf_token %}
-	{{ form.as_p }}
-	<input type="submit" value="Tweet">
-</form>
+{% include "form.html" with form=form btn_title="Tweet" %}
