--- a/src/tweets/templates/list_view.html
+++ b/src/tweets/templates/list_view.html
@@ -1,3 +1,5 @@
+{% include "search_form.html" %}<br/>
+
 {% for object in object_list %}
 
 	{{ object.id }}<br/>
@@ -5,7 +7,9 @@
 	{{ object.user }}<br/>
 	{{ object.timestamp|timesince }}<br/>
 {% empty %}
-
-	<p>No tweet yet.</p>
-
+	{% if request.GET.q %}
+		<p>No tweet found.</p>
+	{% else %}
+		<p>No tweet yet.</p>
+	{% endif %}
 {% endfor %}
