--- a/src/tweets/templates/create_view.html
+++ b/src/tweets/templates/create_view.html
@@ -1,1 +1,9 @@
-{% include "form.html" with form=form btn_title="Tweet" %}
+{% extends "_base.html" %}
+
+{% block title %} Create Tweet | {{ block.super }} {% endblock %}
+
+{% block content %}
+
+	{% include "form.html" with form=form btn_title="Tweet" %}
+
+{% endblock %}
