--- a/src/tweets/templates/delete_confirm.html
+++ b/src/tweets/templates/delete_confirm.html
@@ -1,5 +1,11 @@
+{% extends "_base.html" %}
+
+{% block content %}
+
 <form action="" method="POST">
 	{% csrf_token %}
 	<p>Are you sure you want to delete te tweet"{{ object }}"?</p>
 	<input type="submit" value="Confirm">
 </form>
+
+{% endblock %}
