--- a/src/tweets/templates/detail_view.html
+++ b/src/tweets/templates/detail_view.html
@@ -1,4 +1,15 @@
-{{ object.id }}<br/>
-{{ object.content }}<br/>
-{{ object.user }}<br/>
-{{ object.timestamp|timesince }}<br/>
+{% extends "_base.html" %}
+
+{% block content %}
+<div class="row">
+	<div class="col-sm-3 col-xs-12">
+		<h1>{{ object.user }}</h1>
+	</div>
+	<div class="col-sm-9 col-xs-12">
+		{{ object.content }}<br/>
+	
+	{{ object.timestamp|timesince }}<br/>
+	</div>
+	
+</div>
+{% endblock %}
