--- a/src/tweets/templates/list_view.html
+++ b/src/tweets/templates/list_view.html
@@ -1,15 +1,34 @@
-{% include "search_form.html" %}<br/>
+{% extends "_base.html" %}
 
-{% for object in object_list %}
+{% block content %}
 
-	{{ object.id }}<br/>
-	{{ object.content }}<br/>
-	{{ object.user }}<br/>
-	{{ object.timestamp|timesince }}<br/>
-{% empty %}
-	{% if request.GET.q %}
-		<p>No tweet found.</p>
-	{% else %}
-		<p>No tweet yet.</p>
-	{% endif %}
-{% endfor %}
+
+	
+	<div class="row">
+		<div class="col-sm-3 col-xs-12">
+			<h1>{{ request.user }}</h1>
+		</div>
+		<div class="col-sm-9 ">
+		{% for object in object_list %}
+		<div class="media">
+			<div class="media-left">
+				<a href="#">
+				{% if object.image %}	<img class="media-object" src="" alt=""> {% endif %}
+				</a>
+			</div>
+			<div class="media-body">
+			{{ object.content }}<br/>
+			via {{ object.user }} | {{ object.timestamp|timesince }} | <a href="{{ object.get_absolute_url }}">View</a>
+			<hr/>
+			</div>
+		</div>
+		{% empty %}
+			{% if request.GET.q %}
+				<p>No tweet found.</p>
+			{% else %}
+				<p>No tweet yet.</p>
+			{% endif %}
+		{% endfor %}
+		</div>
+	</div>
+{% endblock content %}
