--- a/src/tweets/templates/search_form.html
+++ b/src/tweets/templates/search_form.html
@@ -1,4 +1,6 @@
-<form action="{% url 'tweet:list' %}" method="GET">
-	<input type="text" name=q placeholder="Search" value='{{ request.GET.q }}'>
-	<input type="submit" value='Search'>
+<form class="navbar-form navbar-left" action="{% url 'tweet:list' %}" method="GET">
+	<div class="form-group">
+		<input class="form-control" type="text" name=q placeholder="You search" value='{{ request.GET.q }}'>
+	</div>
+	<input class="btn btn-default" type="submit" value='Search'>
 </form>
