--- a/src/tweets/templates/create_view.html
+++ b/src/tweets/templates/create_view.html
@@ -3,7 +3,12 @@
 {% block title %} Create Tweet | {{ block.super }} {% endblock %}
 
 {% block content %}
-
-	{% include "form.html" with form=form btn_title="Tweet" %}
+<div class="row">
+	<div class="col-sm-8 col-sm-offset-2">
+		<h1>Create Tweet</h1>
+		{% include "form.html" with form=form btn_title="Tweet" %}
+	</div>
+</div>
+	
 
 {% endblock %}
