--- a/src/tweets/templates/form.html
+++ b/src/tweets/templates/form.html
@@ -1,4 +1,4 @@
-<form class="form" action="" method="POST"> {% csrf_token %}
+<form class="form" action="{% if action_url %} {{ action_url}}{% endif %}" method="POST"> {% csrf_token %}
 	{{ form.as_p }}
-	<input type="submit" value="{{ btn_title }}">
+	<input class="btn btn-primary" type="submit" value="{{ btn_title }}">
 </form>
