--- a/src/tweets/templates/form.html
+++ b/src/tweets/templates/form.html
@@ -1,4 +1,5 @@
+{% load crispy_forms_tags %}
 <form class="form" action="{% if action_url %} {{ action_url}}{% endif %}" method="POST"> {% csrf_token %}
-	{{ form.as_p }}
+	{{ form|crispy }}
 	<input class="btn btn-primary" type="submit" value="{{ btn_title }}">
 </form>
