--- a/src/tweets/templates/list_view.html
+++ b/src/tweets/templates/list_view.html
@@ -1,7 +1,91 @@
 {% extends "_base.html" %}
 
+{% block script %}
+<script>
+
+	function getParameterByName(name, url) {
+    if (!url) url = window.location.href;
+    name = name.replace(/[\[\]]/g, "\\$&");
+    var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
+        results = regex.exec(url);
+    if (!results) return null;
+    if (!results[2]) return '';
+    return decodeURIComponent(results[2].replace(/\+/g, " "));
+	}
+
+
+	$(document).ready(function(){
+		console.log("working")
+
+		var query = getParameterByName('q')
+		var tweetList = [];
+
+		function parseTweets() {
+			if (tweetList == 0) {
+				$("#tweet-container").text("No tweets currently found.")
+			} else {
+				$.each(tweetList, function(key, value){
+					var tweetKey = key
+					var tweetContent = value.content
+					var tweetUser = value.user
+					$("#tweet-container").append(
+							"<div class=\"media\"><div class=\"media-body\">" + tweetContent + "<br/> via " + tweetUser.username + " | " + "<a href='#'>View</a>" +  "</div></div><hr/>"
+						)
+				})
+			}
+		}
+
+		function fetchTweets() {
+			$.ajax({
+			url: "/api/tweet/",
+			method: "GET",
+			data: {
+				"q": query
+			},
+			success: function(data) {
+				// console.log(data)
+				tweetList = data
+				parseTweets()
+			},
+			error: function(data){
+				console.log("error")
+			}
+			})
+		}
+
+		fetchTweets()
+		
+		$("#tweet-form").submit(function(event){
+			event.preventDefault()
+			var ths = $(this)
+			var formData = ths.serialize()
+			$.ajax({
+				url: "/api/tweet/create/",
+				method: "POST",
+				data: formData,
+				success: function(data) {
+					// console.log(data)
+					//tweetList = data
+					//parseTweets()
+					fetchTweets()
+				},
+				error: function(data){
+					console.log("error")
+				}
+			})
+
+
+			
+		})
+	});
+
+
+</script>
+{% endblock script %}
+
+
 {% block content %}
-	
+
 	<div class="row">
 		<div class="col-sm-3 col-xs-12">
 			<h1>{{ request.user }}</h1>
@@ -9,30 +93,14 @@
 		<div class="col-sm-9 ">
 		{% if not request.GET.q %}
 			<div class="">
-				{% include "form.html" with form=create_form action_url=create_url btn_title="Tweeet" %}
+				{% include "form.html" with form=create_form action_url=create_url btn_title="Tweeet" form_id="tweet-form"%}
 			</div>
 			<hr/>
 		{% endif %}	
-		{% for object in object_list %}
-		<div class="media">
-			<div class="media-left">
-				<a href="#">
-				{% if object.image %}	<img class="media-object" src="" alt=""> {% endif %}
-				</a>
-			</div>
-			<div class="media-body">
-			{{ object.content }}<br/>
-			via {{ object.user }} | {{ object.timestamp|timesince }} | <a href="{{ object.get_absolute_url }}">View</a>
-			<hr/>
-			</div>
-		</div>
-		{% empty %}
-			{% if request.GET.q %}
-				<p>No tweet found.</p>
-			{% else %}
-				<p>No tweet yet.</p>
-			{% endif %}
-		{% endfor %}
+
+		<div id="tweet-container">
+	
+		</div>	
 		</div>
 	</div>
 {% endblock content %}
