--- a/src/accounts/templates/accounts/user_detail.html
+++ b/src/accounts/templates/accounts/user_detail.html
@@ -4,7 +4,11 @@
 <div class="row">
 	<div class="col-sm-3 col-xs-12">
 		<h1>{{ object.username }}</h1>
+		<hr/>
 		<p> Followers: {{ object.followed_by.all.count }}</p>
+		<p><a class="btn btn-link" href="{% url 'profiles:follow' username=object.username %}">
+			{% if following %} UnFollow {% else %} Follow {% endif %}
+			</a></p>
 	</div>
 	<div class="col-sm-9 col-xs-12">
 		<h1>Tweets </h1>
