--- a/src/tweets/templates/list_view.html
+++ b/src/tweets/templates/list_view.html
@@ -19,7 +19,16 @@
 
 		var query = getParameterByName('q')
 		var tweetList = [];
-		var nextTweetUrl; 
+		var nextTweetUrl;
+
+		function  updateHashLinks(){
+			$(".media-body").each(function(data){
+				var hashtagRegex = /(^|\s)#([\w\d]+)/g
+				var newText = $(this).html().replace(hashtagRegex, "$1<a href='/tags/$2/'>#$2</a>")
+				$(this).html(newText)
+				// create hashtag here
+			})
+		}
 
 		function attachTweet(tweetValue, prepend){
 			var dateDisplay = tweetValue.date_display
@@ -68,6 +77,7 @@
 					$("#loadmore").css("display", "none")
 				}
 				parseTweets()
+				updateHashLinks()
 			},
 			error: function(data){
 				console.log("error")
@@ -123,6 +133,7 @@
 					success: function(data) {
 						ths.find("textarea").val("")
 						attachTweet(data, true)
+						updateHashLinks()
 						// console.log(data)
 						//tweetList = data
 						//parseTweets()
