--- a/src/tweets/templates/list_view.html
+++ b/src/tweets/templates/list_view.html
@@ -30,11 +30,20 @@
 			})
 		}
 
-		function attachTweet(tweetValue, prepend){
-			var dateDisplay = tweetValue.date_display
-			var tweetContent = tweetValue.content
-			var tweetUser = tweetValue.user
-			var tweetFormattedHtml = "<div class=\"media\"><div class=\"media-body\">" + tweetContent + "<br/> via <a href='" + tweetUser.url + "'>" + tweetUser.username + "</a> | " + dateDisplay + " | "  + "<a href='#'>View</a>" +  "</div></div><hr/>"
+		function attachTweet(tweetValue, prepend, retweet){
+			var dateDisplay = tweetValue.date_display;
+			var tweetContent = tweetValue.content;
+			var tweetUser = tweetValue.user;
+			var tweetFormattedHtml;
+			if (retweet && tweetValue.parent){
+				var mainTweet = tweetValue.parent
+				//retweet
+				tweetFormattedHtml = "<div class=\"media\"><div class=\"media-body\"><span class='grey-color'>Retweet via <a href='" + tweetUser.url + "'>" + tweetUser.username + "</a>" + " on " + dateDisplay + "</span><br/>" + mainTweet.content + "<br/> via <a href='" + mainTweet.user.url + "'>" + mainTweet.user.username + "</a> | " + mainTweet.date_display + " | "  + "<a href='/tweet/" + mainTweet.id + "'" + ">View</a> | " + "<a href='/tweet/" + tweetValue.id + "/retweet/'" + ">Retweet</a>" + "</div></div><hr/>"
+			} else {
+				// fress tweet
+				tweetFormattedHtml = "<div class=\"media\"><div class=\"media-body\">" + tweetContent + "<br/> via <a href='" + tweetUser.url + "'>" + tweetUser.username + "</a> | " + dateDisplay + " | "  + "<a href='/tweet/" + tweetValue.id + "'" + ">View</a> | " + "<a href='/tweet/" + tweetValue.id + "/retweet/'" + ">Retweet</a>" + "</div></div><hr/>"
+			}
+			
 			if (prepend == true){
 				$("#tweet-container").prepend(tweetFormattedHtml)
 			} else {
@@ -48,8 +57,12 @@
 				$("#tweet-container").text("No tweets currently found.")
 			} else {
 				$.each(tweetList, function(key, value){
-					var tweetKey = key
-					attachTweet(value)
+					var tweetKey = key;
+					if (value.parent){
+						attachTweet(value, false, true)
+					} else {
+						attachTweet(value)
+					}	
 				})
 			}
 		}
