--- a/src/tweets/templates/list_view.html
+++ b/src/tweets/templates/list_view.html
@@ -21,6 +21,23 @@
 		var tweetList = [];
 		var nextTweetUrl;
 
+		$(document.body).on("click", ".retweetBtn", function(event){
+			event.preventDefault()
+			console.log("CLICKED!")
+			var url = "/api" + $(this).attr("href")
+			$.ajax({
+				method: "GET",
+				url: url,
+				success: function(data){
+					console.log("ok")
+					attachTweet(data, true, true)
+					updateHashLinks()
+				}, 
+				error: function(data){
+					console.log("error")
+				}
+			})
+		})
 		function  updateHashLinks(){
 			$(".media-body").each(function(data){
 				var hashtagRegex = /(^|\s)#([\w\d]+)/g
@@ -38,10 +55,10 @@
 			if (retweet && tweetValue.parent){
 				var mainTweet = tweetValue.parent
 				//retweet
-				tweetFormattedHtml = "<div class=\"media\"><div class=\"media-body\"><span class='grey-color'>Retweet via <a href='" + tweetUser.url + "'>" + tweetUser.username + "</a>" + " on " + dateDisplay + "</span><br/>" + mainTweet.content + "<br/> via <a href='" + mainTweet.user.url + "'>" + mainTweet.user.username + "</a> | " + mainTweet.date_display + " | "  + "<a href='/tweet/" + mainTweet.id + "'" + ">View</a> | " + "<a href='/tweet/" + tweetValue.id + "/retweet/'" + ">Retweet</a>" + "</div></div><hr/>"
+				tweetFormattedHtml = "<div class=\"media\"><div class=\"media-body\"><span class='grey-color'>Retweet via <a href='" + tweetUser.url + "'>" + tweetUser.username + "</a>" + " on " + dateDisplay + "</span><br/>" + mainTweet.content + "<br/> via <a href='" + mainTweet.user.url + "'>" + mainTweet.user.username + "</a> | " + mainTweet.date_display + " | "  + "<a href='/tweet/" + mainTweet.id + "'" + ">View</a> | " + "<a class='retweetBtn' href='/tweet/" + tweetValue.id + "/retweet/'" + ">Retweet</a>" + "</div></div><hr/>"
 			} else {
 				// fress tweet
-				tweetFormattedHtml = "<div class=\"media\"><div class=\"media-body\">" + tweetContent + "<br/> via <a href='" + tweetUser.url + "'>" + tweetUser.username + "</a> | " + dateDisplay + " | "  + "<a href='/tweet/" + tweetValue.id + "'" + ">View</a> | " + "<a href='/tweet/" + tweetValue.id + "/retweet/'" + ">Retweet</a>" + "</div></div><hr/>"
+				tweetFormattedHtml = "<div class=\"media\"><div class=\"media-body\">" + tweetContent + "<br/> via <a href='" + tweetUser.url + "'>" + tweetUser.username + "</a> | " + dateDisplay + " | "  + "<a href='/tweet/" + tweetValue.id + "'" + ">View</a> | " + "<a class='retweetBtn' href='/tweet/" + tweetValue.id + "/retweet/'" + ">Retweet</a>" + "</div></div><hr/>"
 			}
 			
 			if (prepend == true){
