--- a/src/tweets/templates/list_view.html
+++ b/src/tweets/templates/list_view.html
@@ -3,191 +3,10 @@
 {% block script %}
 <script>
 
-	function getParameterByName(name, url) {
-    if (!url) url = window.location.href;
-    name = name.replace(/[\[\]]/g, "\\$&");
-    var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
-        results = regex.exec(url);
-    if (!results) return null;
-    if (!results[2]) return '';
-    return decodeURIComponent(results[2].replace(/\+/g, " "));
-	}
-
+	
 
 	$(document).ready(function(){
-		console.log("working")
-
-		var query = getParameterByName('q')
-		var tweetList = [];
-		var nextTweetUrl;
-
-		$(document.body).on("click", ".retweetBtn", function(event){
-			event.preventDefault()
-			console.log("CLICKED!")
-			var url = "/api" + $(this).attr("href")
-			$.ajax({
-				method: "GET",
-				url: url,
-				success: function(data){
-					console.log("ok")
-					attachTweet(data, true, true)
-					updateHashLinks()
-				}, 
-				error: function(data){
-					console.log("error")
-				}
-			})
-		})
-		function  updateHashLinks(){
-			$(".media-body").each(function(data){
-				var hashtagRegex = /(^|\s)#([\w\d]+)/g
-				var usernameRegex = /(^|\s)@([\w\d]+)/g
-				var currentHtml = $(this).html()
-				var newText;
-
-				newText = currentHtml.replace(hashtagRegex, "$1<a href='/tags/$2/'>#$2</a>")
-				
-				newText = newText.replace(usernameRegex, "$1@<a href='/profiles/$2/'>$2</a>")
-				
-				$(this).html(newText)
-				// create hashtag here
-			})
-		}
-
-		function attachTweet(tweetValue, prepend, retweet){
-			var dateDisplay = tweetValue.date_display;
-			var tweetContent = tweetValue.content;
-			var tweetUser = tweetValue.user;
-			var tweetFormattedHtml;
-			if (retweet && tweetValue.parent){
-				var mainTweet = tweetValue.parent
-				//retweet
-				tweetFormattedHtml = "<div class=\"media\"><div class=\"media-body\"><span class='grey-color'>Retweet via <a href='" + tweetUser.url + "'>" + tweetUser.username + "</a>" + " on " + dateDisplay + "</span><br/>" + mainTweet.content + "<br/> via <a href='" + mainTweet.user.url + "'>" + mainTweet.user.username + "</a> | " + mainTweet.date_display + " | "  + "<a href='/tweet/" + mainTweet.id + "'" + ">View</a> | " + "<a class='retweetBtn' href='/tweet/" + tweetValue.id + "/retweet/'" + ">Retweet</a>" + "</div></div><hr/>"
-			} else {
-				// fress tweet
-				tweetFormattedHtml = "<div class=\"media\"><div class=\"media-body\">" + tweetContent + "<br/> via <a href='" + tweetUser.url + "'>" + tweetUser.username + "</a> | " + dateDisplay + " | "  + "<a href='/tweet/" + tweetValue.id + "'" + ">View</a> | " + "<a class='retweetBtn' href='/tweet/" + tweetValue.id + "/retweet/'" + ">Retweet</a>" + "</div></div><hr/>"
-			}
-			
-			if (prepend == true){
-				$("#tweet-container").prepend(tweetFormattedHtml)
-			} else {
-				$("#tweet-container").append(tweetFormattedHtml)
-			}
-			
-		}
-
-		function parseTweets() {
-			if (tweetList == 0) {
-				$("#tweet-container").text("No tweets currently found.")
-			} else {
-				$.each(tweetList, function(key, value){
-					var tweetKey = key;
-					if (value.parent){
-						attachTweet(value, false, true)
-					} else {
-						attachTweet(value)
-					}	
-				})
-			}
-		}
-
-		function fetchTweets(url) {
-			var fetchUrl;
-			if (!url) {
-				fetchUrl = "/api/tweet/"
-			} else {
-				fetchUrl = url
-			}
-
-			$.ajax({
-			url: fetchUrl,
-			method: "GET",
-			data: {
-				"q": query
-			},
-			success: function(data) {
-				// console.log(data)
-				tweetList = data.results
-				if (data.next) {
-					nextTweetUrl = data.next
-				} else {
-					$("#loadmore").css("display", "none")
-				}
-				parseTweets()
-				updateHashLinks()
-			},
-			error: function(data){
-				console.log("error")
-			}
-			})
-		}
-
-		fetchTweets()
-
-		$("#loadmore").click(function(event){
-			event.preventDefault()
-			if (nextTweetUrl) {
-				fetchTweets(nextTweetUrl)
-			}
-		})
-		
-		var charsStart = 140;
-		var charsCurrent = 0;
-		$("#tweet-form").append("<span id='tweetCharsLeft'>" + charsStart + "</span>")
-
-		$("#tweet-form textarea").keyup(function(event){
-			// console.log(event)
-			var tweetValue = $(this).val()
-			charsCurrent = charsStart - tweetValue.length
-			var spanChars = $("#tweetCharsLeft")
-			spanChars.text(charsCurrent)
-
-			if (charsCurrent > 0) {
-				spanChars.removeClass("grey-color")
-				spanChars.removeClass("red-color")
-				// reemove classes
-			} else if (charsCurrent == 0) {
-				//add gray class
-				spanChars.removeClass("red-color")
-				spanChars.addClass("grey-color")
-			} else if (charsCurrent < 0) {
-				// add red class
-				spanChars.removeClass("grey-color")
-				spanChars.addClass("red-color")
-			}
-		})
-
-		$("#tweet-form").submit(function(event){
-			event.preventDefault()
-			var ths = $(this)
-			var formData = ths.serialize()
-
-			if (charsCurrent >= 0) {
-					$.ajax({
-					url: "/api/tweet/create/",
-					method: "POST",
-					data: formData,
-					success: function(data) {
-						ths.find("textarea").val("")
-						attachTweet(data, true)
-						updateHashLinks()
-						// console.log(data)
-						//tweetList = data
-						//parseTweets()
-						// fetchTweets()
-					},
-					error: function(data){
-						console.log("error")
-					}
-				})
-			} else {
-				console.log("aasada")
-			}
-			
-
-
-			
-		})
+		loadTweetContainer("tweet-container")
 	});
 
 
@@ -209,10 +28,10 @@
 			<hr/>
 		{% endif %}	
 
-		<div id="tweet-container">
+		<div id="tweet-container" data-url="/api/tweet/">
 	
 		</div>
-		<a href="#" id="loadmore">Load more Tweets</a>	
+			<a href="#" id="loadmore">Load more Tweets</a>	
 		</div>
 	</div>
 {% endblock content %}
