--- a/src/templates/_base.html
+++ b/src/templates/_base.html
@@ -122,26 +122,39 @@
       })
     }
 
-    function attachTweet(tweetValue, prepend, retweet){
-      var dateDisplay = tweetValue.date_display;
-      var tweetContent = tweetValue.content;
-      var tweetUser = tweetValue.user;
-      var tweetFormattedHtml;
+    function formatTweet(tweetValue) {
+      
+      var preContent = null;
+      var container;
+      var tweetContent ;
+      var isReply = tweetValue.reply;
+
+      if (tweetValue.parent && !isReply) {
+        tweetValue = tweetValue.parent
+        preContent = "<span class='grey-color'>Retweet via <a href='" + tweetValue.url + "'>" + tweetValue.username + "</a>" + " on " + tweetValue.date_display + "</span><br/>"
+      } else if (tweetValue.parent && isReply){
+        preContent = "<span class='grey-color'>Reply to @ <a href='" + tweetValue.parent.user.url + "'>" + tweetValue.parent.user.username + "</a></span><br/>"
+      }
       var verb = 'Like'
       if (tweetValue.did_like){
         verb = 'Unlike'
       }
 
+      tweetContent = tweetValue.content + "<br/> via <a href='" + tweetValue.user.url + "'>" + tweetValue.user.username + "</a> | " + tweetValue.date_display + " | "  + "<a href='/tweet/" + tweetValue.id + "'" + ">View</a> | " + "<a class='retweetBtn' href='/tweet/" + tweetValue.id + "/retweet/'" + ">Retweet</a> | " + "<a class='tweet-like' href='#' data-id="+ tweetValue.id +">" + verb +" (" + tweetValue.likes + ")</a><a class='tweet-reply' href='#' data-id="+ tweetValue.id +"> | Reply</a>"
 
-      if (retweet && tweetValue.parent){
-        var mainTweet = tweetValue.parent
-        //retweet
-        tweetFormattedHtml = "<div class=\"media\"><div class=\"media-body\"><span class='grey-color'>Retweet via <a href='" + tweetUser.url + "'>" + tweetUser.username + "</a>" + " on " + dateDisplay + "</span><br/>" + mainTweet.content + "<br/> via <a href='" + mainTweet.user.url + "'>" + mainTweet.user.username + "</a> | " + mainTweet.date_display + " | "  + "<a href='/tweet/" + mainTweet.id + "'" + ">View</a> | " + "<a class='retweetBtn' href='/tweet/" + tweetValue.id + "/retweet/'" + ">Retweet</a> | " + "<a class='tweet-like' href='#' data-id="+ tweetValue.id +">" + verb +" (" + tweetValue.likes + ")</a></div></div><hr/>"
+      if (preContent) {
+        container = "<div class=\"media\"><div class=\"media-body\">" + preContent + tweetContent +"</div></div><hr/>"
       } else {
-        // fress tweet
-        tweetFormattedHtml = "<div class=\"media\"><div class=\"media-body\">" + tweetContent + "<br/> via <a href='" + tweetUser.url + "'>" + tweetUser.username + "</a> | " + dateDisplay + " | "  + "<a href='/tweet/" + tweetValue.id + "'" + ">View</a> | " + "<a class='retweetBtn' href='/tweet/" + tweetValue.id + "/retweet/'" + ">Retweet</a> | " + "<a class='tweet-like' href='#' data-id="+ tweetValue.id +">" + verb +" (" + tweetValue.likes + ")</a></div></div><hr/>"
+        container = "<div class=\"media\"><div class=\"media-body\">"+ tweetContent +"</div></div><hr/>"
       }
       
+      return container
+    }
+
+    function attachTweet(tweetValue, prepend, retweet){
+
+      tweetFormattedHtml = formatTweet(tweetValue)
+
       if (prepend == true){
         tweetContainer.prepend(tweetFormattedHtml)
       } else {
