--- a/src/templates/_base.html
+++ b/src/templates/_base.html
@@ -90,28 +90,15 @@
       var this_ = $(this)
       var parentId = this_.attr("data-id")
       var username = this_.attr("data-user")
+      var content = this_.parent().parent().find(".content").text()
       $("#replyModal").modal({})
+      $("#replyModal textarea").after("<input type='hidden' value='" + parentId + "'name='parent_id'/>")
+      $("#replyModal textarea").after("<input type='hidden' value='" + true + "'name='reply'/>")
       $("#replyModal textarea").val("@" + username + " ")
+      $("#replyModal #replyModalLabel").text("Reply to " + content)
       $("#replyModal").on("shown.bs.modal", function(){
         $("textarea").focus()
       })
-
-      // var url = "/api" + $(this).attr("href")
-      // $.ajax({
-      //   method: "GET",
-      //   url: url,
-      //   success: function(data){
-      //     console.log("ok")
-      //     if (initialURL == "/api/tweet/") {
-      //       attachTweet(data, true, true)
-      //       updateHashLinks()
-      //     }
-          
-      //   }, 
-      //   error: function(data){
-      //     console.log("error")
-      //   }
-      // })
     })
 
 
@@ -170,7 +157,7 @@
         verb = 'Unlike'
       }
 
-      tweetContent = tweetValue.content + "<br/> via <a href='" + tweetValue.user.url + "'>" + tweetValue.user.username + "</a> | " + tweetValue.date_display + " | "  + "<a href='/tweet/" + tweetValue.id + "'" + ">View</a> | " + "<a class='retweetBtn' href='/tweet/" + tweetValue.id + "/retweet/'" + ">Retweet</a> | " + "<a class='tweet-like' href='#' data-id='"+ tweetValue.id +"'>" + verb +" (" + tweetValue.likes + ")</a><a class='tweet-reply' href='#' data-id="+ tweetValue.id +" data-user='"+ tweetValue.user.username +"'> | Reply</a>"
+      tweetContent = "<span class='content'>" + tweetValue.content + "</span><br/> via <a href='" + tweetValue.user.url + "'>" + tweetValue.user.username + "</a> | " + tweetValue.date_display + " | "  + "<a href='/tweet/" + tweetValue.id + "'" + ">View</a> | " + "<a class='retweetBtn' href='/tweet/" + tweetValue.id + "/retweet/'" + ">Retweet</a> | " + "<a class='tweet-like' href='#' data-id='"+ tweetValue.id +"'>" + verb +" (" + tweetValue.likes + ")</a><a class='tweet-reply' href='#' data-id="+ tweetValue.id +" data-user='"+ tweetValue.user.username +"'> | Reply</a>"
 
       if (preContent) {
         container = "<div class=\"media\"><div class=\"media-body\">" + preContent + tweetContent +"</div></div><hr/>"
@@ -250,7 +237,7 @@
     
     var charsStart = 140;
     var charsCurrent = 0;
-    $(".tweet-form").append("<span class='tweetCharsLeft'>" + charsStart + "</span>")
+    $(".tweet-form").append("<span class='tweetCharsLeft' style='margin-left: 20px'>" + charsStart + "</span>")
 
     $(".tweet-form textarea").keyup(function(event){
       // console.log(event)
