--- a/src/templates/_base.html
+++ b/src/templates/_base.html
@@ -48,7 +48,7 @@
     return decodeURIComponent(results[2].replace(/\+/g, " "));
   }
 
-  function loadTweetContainer(tweetContainerID){
+  function loadTweetContainer(tweetContainerID, fetchOneId){
     console.log("working")
 
     var query = getParameterByName('q')
@@ -226,7 +226,38 @@
       })
     }
 
-    fetchTweets()
+     function fetchSingle(fetchOneId) {
+      var fetchDetailUrl = '/api/tweet/' + fetchOneId + "/";
+      
+
+      $.ajax({
+      url: fetchDetailUrl,
+      method: "GET",
+
+      success: function(data) {
+        console.log(data)
+        tweetList = data.results
+        // if (data.next) {
+        //   nextTweetUrl = data.next
+        // } else {
+        //   $("#loadmore").css("display", "none")
+        // }
+        parseTweets()
+        updateHashLinks()
+      },
+      error: function(data){
+        console.log("error")
+      }
+      })
+    }
+
+
+
+    if (fetchOneId) {
+      fetchSingle(fetchOneId)
+    }else {
+      fetchTweets()
+    }
 
     $("#loadmore").click(function(event){
       event.preventDefault()
@@ -317,7 +348,7 @@
         function doneSearchTyping() {
           if (searchQuery) {
             //do search
-            var url ='/tweet/search/?q=' + searchQuery
+            var url ='/search/?q=' + searchQuery
             document.location.href = url;
           }
         }
