--- a/src/tweets/templates/detail_view.html
+++ b/src/tweets/templates/detail_view.html
@@ -1,14 +1,25 @@
 {% extends "_base.html" %}
 
+{% block script %}
+<script>
+
+	
+
+	$(document).ready(function(){
+		loadTweetContainer("tweet-container", {{ object.id }})
+	});
+
+
+</script>
+{% endblock script %}
+
 {% block content %}
 <div class="row">
 	<div class="col-sm-3 col-xs-12">
 		<h1>{{ object.user }}</h1>
 	</div>
 	<div class="col-sm-9 col-xs-12">
-		{{ object.content }}<br/>
-	
-	{{ object.timestamp|timesince }}<br/>
+		<div id="tweet-container"></div>
 	</div>
 	
 </div>
