--- a/src/tweets/templates/search_form.html
+++ b/src/tweets/templates/search_form.html
@@ -1,4 +1,4 @@
-<form id="navbar-search-form" class="navbar-form navbar-left" action="{% url 'tweet:list' %}" method="GET">
+<form id="navbar-search-form" class="navbar-form navbar-left" action="{% url 'search' %}" method="GET">
 	<div class="form-group">
 		<input class="form-control" type="text" name=q placeholder="You search" value='{{ request.GET.q }}'>
 	</div>
