--- a/src/accounts/templates/accounts/user_detail.html
+++ b/src/accounts/templates/accounts/user_detail.html
@@ -1,5 +1,5 @@
 {% extends "_base.html" %}
-
+{% load recommended %}
 
 {% block script %}
 <script>
@@ -39,6 +39,9 @@
 		{% empty %}
 		<h4>Not followed by any users.</h4>
 		{% endfor %}
+		<hr/>
+		<h1>Recommended to follow</h1>
+		{% recommended request.user %}
 	</div>
 	<div class="col-sm-9 col-xs-12">
 		<h1>Tweets </h1>
