--- a/src/tweets/templates/list_view.html
+++ b/src/tweets/templates/list_view.html
@@ -1,5 +1,5 @@
 {% extends "_base.html" %}
-
+{% load recommended %}
 {% block script %}
 <script>
 
@@ -19,6 +19,9 @@
 	<div class="row">
 		<div class="col-sm-3 col-xs-12">
 			<h1>{{ request.user }}</h1>
+			<hr/>
+			<p class="lead">Recommended Users</p>
+			{% recommended request.user %}
 		</div>
 		<div class="col-sm-9 ">
 		{% if not request.GET.q %}
